--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -348,7 +348,9 @@
                 </div>
             </span>
             <div class="choice-label">
-                <label for="difPrivacy"><b>Will this dataset include any data governed under the IRB or HIPAA, or data with other ethical issues?</b></label>
+                <label for="difPrivacy"><b>Will this dataset include any data governed under the Institutional Review
+                        Board (IRB) or Health Insurance Portability and Accountability Act of 1996 (HIPAA), or data
+                        with other human ethical issues?</b></label>
                 <br>
                 {% for key, ethicalIssuesItem in form.ethicalIssues.children %}
                     {{ form_widget(ethicalIssuesItem) }}
