Changed tab name to Files

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
@@ -26,7 +26,7 @@
                     <img class="tabimg">
                 </li>
                 <li>
-                    <a class="dstablink" href="#ds-submit">File Uploader</a>
+                    <a class="dstablink" href="#ds-submit">Files</a>
                 </li>
             </ul>
 
