--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submit.html.twig
@@ -18,7 +18,7 @@
                 </td>
                 <td>
                     <h2>
-                        <a href="{{ path('pelagos_app_ui_datasetreview_default') }}?udi={{ DatasetSubmission.getDatasetSubmissionId }}">
+                        <a href="{{ path('pelagos_app_ui_datasetreview_default') }}?udiReview={{ DatasetSubmission.getDatasetSubmissionId }}">
                             {{ DatasetSubmission.getDatasetSubmissionId }}
                         </a>
                     </h2>
