Added javascript and notification to show the flashbag messages

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
@@ -1,12 +1,35 @@
 {% extends "PelagosAppBundle::layout.html.twig" %}
 
 {% block head %}
-    <h2> End review tool</h2>
+
+    {{
+        add_js(
+            [
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js'
+            ]
+        )
+    }}
+
+    {% javascripts
+        '@PelagosAppBundle/Resources/public/js/pelagosNoty.js'
+        '@PelagosAppBundle/Resources/public/js/endReviewTool.js'
+    %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
 {% endblock %}
 
 
 {% block body %}
-        {{ form_start(form) }}
+    <h2> End review tool</h2>
+        {% if app.session.flashbag %}
+            {% for label, messages in app.session.flashbag.all %}
+                {% for message in messages %}
+                    <div class="pelagosNoty" text="{{message}}" type="{{label}}"></div>
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
+    {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
 {% endblock %}
