--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -9,6 +9,7 @@
             <li><a href="{{ path("pelagos_app_ui_datasetsummary_default") }}">Dataset Summary and Deletion</a></li>
             <li><a href="{{ path("pelagos_app_ui_datasetrestrictions_default") }}">Dataset Restrictions</a></li>
             <li><a href="{{ path("pelagos_app_ui_datasetreview_default") }}">Dataset Review</a></li>
+            <li><a href="{{ path("pelagos_app_ui_endreview_default") }}">End Review Tool</a></li>
             <li>
                 Lists
                 <ul>
