--- a/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
@@ -1,6 +1,13 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle:template:UI.html.twig" %}
 
 {% block head %}
+    {{
+        add_library (
+            [
+                'ui.dialog'
+            ]
+        )
+    }}
 
     {{
         add_js(
@@ -11,6 +18,7 @@
     }}
 
     {% javascripts
+        '@PelagosAppBundle/Resources/public/js/common.js'
         '@PelagosAppBundle/Resources/public/js/pelagosNoty.js'
         '@PelagosAppBundle/Resources/public/js/endReviewTool.js'
     %}
@@ -32,4 +40,5 @@
     {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
+        <div id="confirmationText" style="display: none;">Are you sure you want to end review for the dataset</div>
 {% endblock %}
