Some changes to make submit handler work.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
@@ -12,6 +12,7 @@
     {{
         add_js(
             [
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js'
             ]
         )
