--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
@@ -1,6 +1,7 @@
 {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
 <div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton">
-    <div style="text-align: center">{{ form_widget(form.submitButton, {'label':'End Review'} ) }}</div>
+    {{ form_widget(form.acceptDatasetBtn, {'label':'Accept Review'} ) }}
+    {{ form_widget(form.submitButton, {'label':'End Review'} ) }}
 </div>
     <fieldset>
         <div style="background: transparent;" id="dtabs">
