Add Check mark and validations for regform

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/file-submit.html.twig
@@ -1,12 +1,5 @@
 {% set sftpuser=app.user.isPosix() %}
-
-<div class="invaliddsform">
-    <h1>
-        You have not completed all required fields.
-    </h1>
-</div>
-
-<div class="validdsform">
+<div>
     <fieldset> <!-- Dataset File Transfer Details -->
         <legend class="section-header">Dataset File Transfer Details</legend>
 
