--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
@@ -1,14 +1,8 @@
 {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
-<<<<<<< HEAD
 <div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton" style="text-align: center">
     {{ form_widget(form.acceptDatasetBtn, {'label':'Accept Review'} ) }}
-    {{ form_widget(form.submitButton, {'label':'End Review'} ) }}
+    {{ form_widget(form.endReviewBtn, {'label':'End Review'} ) }}
     {{ form_widget(form.requestRevisionsBtn, {'label':'Request Revisions'} ) }}
-=======
-<div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton">
-    {{ form_widget(form.acceptDatasetBtn) }}
-    {{ form_widget(form.endReviewBtn) }}
->>>>>>> epic/PELAGOS-2826-dataset-review-workflow
 </div>
     <fieldset>
         <div style="background: transparent;" id="dtabs">
