--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -100,6 +100,7 @@
         </td>
     </tr>
 
+    {% if dl_ok == 1 %}
     {% if dataset.datasetSubmission|default %}
 
         {% set showExtent = false %}
@@ -164,6 +165,7 @@
                  </td>
             </tr>
         {% endif %}
+    {% endif %}
     {% endif %}
 </table>
 
