Create input GML control tab

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/GeoViz/wizard_map.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/GeoViz/wizard_map.html.twig
@@ -25,6 +25,9 @@
                                         <li>
                                             <a href="#boundingBoxTab">Box</a>
                                         </li>
+                                        <li>
+                                            <a href="#gmlTab">GML</a>
+                                        </li>
                                     </ul>
                                     <div id="coordListTab">
                                         <label id="coordlistLbl" for="coordlist">Coordinate List</label>
@@ -59,6 +62,10 @@
                                                 </tr>
                                             </table>
                                         </form>
+                                    </div>
+                                    <div id="gmlTab">
+                                        <label id="inputGmlLbl" for="inputGml">Input GML</label>
+                                        <textarea id="inputGml" style="width:95%;"></textarea>
                                     </div>
                                     <button style="width: 100%;" id="drawOnMap">Render on Map</button>
                                 </div>
