Added nilreason select box to the form and getter to the entity

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/extent.html.twig
@@ -12,6 +12,9 @@
                     <div id="nonspatial">
                         {{ form_row(form.spatialExtentDescription) }}
                     </div>
+                    <div id="nilreason">
+                        {{ form_row(form.nilReasonType) }}
+                    </div>
                     <div id="spatial">
                         <label><span class="emRequired"/>Spatial Extent</label>
                         <div>
