Added radio button to show/hide nilReason type

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/extent.html.twig
@@ -12,9 +12,6 @@
                     <div id="nonspatial">
                         {{ form_row(form.spatialExtentDescription) }}
                     </div>
-                    <div id="nilreason">
-                        {{ form_row(form.nilReasonType) }}
-                    </div>
                     <div id="spatial">
                         <label><span class="emRequired"/>Spatial Extent</label>
                         <div>
@@ -28,11 +25,18 @@
                 </td>
             </tr>
         </table>
-        <table class="tab-table" id="spatialExtras">
+        <table class="tab-table">
             <tr>
                 <td colspan="2"></td>
             </tr>
-            <tr>
+            <tr id="temporalInfoQuestion">
+                <td colspan="2">
+                    Do you have all the required information for temporal extent?
+                    <input type="radio" id="checkNilReason" name="temporalChoice" checked> Yes
+                    <input type="radio" id="checkNilReason" name="temporalChoice"> No
+                </td>
+            </tr>
+            <tr class="spatialExtras">
                 <td colspan="2">
 					<span class="helpSection">
 						{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
@@ -51,7 +55,7 @@
                     {{ form_row(form.temporalExtentDesc) }}
                 </td>
             </tr>
-            <tr>
+            <tr class="spatialExtras">
                 <td colspan="2">
 					<span class="helpSection">
 						{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
@@ -65,7 +69,7 @@
                     {{ form_row(form.temporalExtentBeginPosition) }}
                 </td>
             </tr>
-            <tr>
+            <tr class="spatialExtras">
                 <td colspan="2">
 					<span class="helpSection">
 						{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
@@ -79,6 +83,21 @@
                     {{ form_row(form.temporalExtentEndPosition) }}
                 </td>
 
+            </tr>
+            <tr class="nilReasonTemporal">
+                <td colspan="2">
+					<span class="helpSection">
+						{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+                            <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            'nilReasoning' the temporal extent means the review will leave the temporal
+                            extent empty because the dataset does not have a relevant temporal extent,
+                            and indicate the reason.
+						</div>
+					</span>
+                    {{ form_row(form.temporalExtentNilReasonType) }}
+                </td>
             </tr>
         </table>
     </div>
