Added national data center controller, view and route

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -29,6 +29,7 @@
                     <li><a href="{{ path("pelagos_app_ui_persondatarepository_default") }}">Person to Data Repository Association</a></li>
                     <li><a href="{{ path("pelagos_app_ui_personfundingorganization_default") }}">Person to Funding Organization Association</a></li>
                     <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_default") }}">Dataset - Publication Link</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_nationaldatacenter_default") }}">National Data Center</a></li>
                 </ul>
             </li>
             <li>
