--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/NationalDataCenter.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/NationalDataCenter.html.twig
@@ -6,5 +6,21 @@
 
 
 {% block body %}
-    <h1> National Data center</h1>
+
+    <div>
+        <table border="0" width="100%">
+            <tr>
+                <td width="25%">
+                    <div id="placeholder" style="height:100px;">
+                    </div>
+                </td>
+                <td style="padding:10px;" width="60%" valign="top">
+                    <div id="orgdetails">
+                        <h2>National Data Center Details</h2>
+                        {% include '@templates/forms/NationalDataCenter.html.twig' %}
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
 {% endblock %}
