Added javascript for phone number clean up

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/NationalDataCenter.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/NationalDataCenter.html.twig
@@ -2,8 +2,12 @@
 
 {% block head %}
     {{ parent () }}
-{% endblock %}
 
+    {% javascripts '@PelagosAppBundle/Resources/public/js/entity/NationalDataCenter.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
+{% endblock %}
 
 {% block body %}
 
