--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
@@ -32,6 +32,10 @@
                     <img class="tabimg">
                 </li>
                 <li>
+                    <a class="dstablink" href="#ds-distribution-contact">Distribution Contact</a>
+                    <img class="tabimg">
+                </li>
+                <li>
                     <a class="dstablink" href="#ds-submit">Files</a>
                     <img class="tabimg" id="filetabimg">
                 </li>
@@ -63,6 +67,10 @@
 
             <div id="ds-metadata-contact" class="ds-metadata">
                 {% include 'PelagosAppBundle:DatasetReview:metadata-contact.html.twig' %}
+            </div>
+
+            <div id="ds-distribution-contact" class="ds-metadata">
+                {% include 'PelagosAppBundle:DatasetReview:distribution-contact.html.twig' %}
             </div>
 
             <div id="ds-submit" class="ds-metadata">
