--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/NationalDataCenter.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/NationalDataCenter.html.twig
@@ -2,6 +2,8 @@
         {% include '@templates/forms/permissionsBlock.html.twig' with {'Entity': NationalDataCenter} %}
       _action="{{path('pelagos_api_national_data_center_post')}}">
 
+    <input type="hidden" name="id" value="{{NationalDataCenter.getId}}">
+
     {{ form_widget(form) }}
 
     {% include '@templates/forms/innerForm.html.twig' with {'Entity': NationalDataCenter} %}
