Changed text for PELAGOS-3088

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -12,7 +12,7 @@
             {% endif %}
             <th class="status" {% if not dataland | default %} title="sort by Identified status" {% endif %}>Identified</th>
             <th class="status" {% if not dataland | default %} title="sort by Submitted status" {% endif %}>Submitted</th>
-            <th class="status" {% if not dataland | default %} title="sort by Metadata status" {% endif %}>Metadata</th>
+            <th class="status" {% if not dataland | default %} title="sort by Metadata status" {% endif %}>Review</th>
             <th class="status" {% if not dataland | default %} title="sort by Available status" {% endif %}>Available</th>
         </tr>
     </thead>
