--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -91,23 +91,23 @@
 
             {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set metadata_na = metadata_na + 1 %}
-                {% set metadata_title = "This dataset has not yet been submitted, therefore no metadata is available." %}
+                {% set metadata_title = "This dataset has not yet been submitted, and therefore cannot be in review." %}
                 {% set metadata_icon = na_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_NONE') %}
                 {% set metadata_red = metadata_red + 1 %}
-                {% set metadata_title = "This dataset has been submitted, but no metadata has been submitted." %}
+                {% set metadata_title = "This dataset package has been submitted and is in review." %}
                 {% set metadata_icon = red_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_SUBMITTED') %}
                 {% set metadata_yellow = metadata_yellow + 1 %}
-                {% set metadata_title = "Metadata for this dataset has been submitted and is in review." %}
+                {% set metadata_title = "This dataset package has been submitted and is in review." %}
                 {% set metadata_icon = yellow_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_ACCEPTED') %}
                 {% set metadata_green = metadata_green + 1 %}
-                {% set metadata_title = "Metadata for this dataset is available, ISO compliant, and has been reviewed and accepted." %}
+                {% set metadata_title = "This dataset package has been reviewed and accepted." %}
                 {% set metadata_icon = green_icon %}
             {% else %}
                 {% set metadata_yellow = metadata_yellow + 1 %}
-                {% set metadata_title = "Metadata for this dataset has been submitted and is in review." %}
+                {% set metadata_title = "This dataset package has been submitted and is in review." %}
                 {% set metadata_icon = yellow_icon %}
             {% endif %}
 
@@ -261,7 +261,7 @@
                 <td style="border: 0px;"></td>
                 <th>Identified</th>
                 <th>Submitted</th>
-                <th>Metadata</th>
+                <th>Review</th>
                 <th>Available</th>
             </tr>
         {% if pdf | default %}
