Add a standard pelagos list for N.D.C. entity.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/Lists.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/Lists.html.twig
@@ -5,6 +5,7 @@
     <li><a href="{{ path('pelagos_app_list_people') }}" target="_blank">People</a></li>
     <li><a href="{{ path('pelagos_app_list_researchgroups') }}" target="_blank">Research Groups</a></li>
     <li><a href="{{ path('pelagos_app_list_fundingorganizations') }}" target="_blank">Funding Organizations</a></li>
+    <li><a href="{{ path('pelagos_app_list_nationaldatacenters') }}" target="_blank">National Data Centers</a></li>
 </ul>
 {% endblock %}
 
