Add link on admin menu.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -17,6 +17,7 @@
                     <li><a href="{{ path("pelagos_app_list_researchgroups") }}">Research Groups</a></li>
                     <li><a href="{{ path("pelagos_app_list_people") }}">People</a></li>
                     <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_list") }}">Dataset - Publication Links</a></li>
+                    <li><a href="{{ path("pelagos_app_list_nationaldatacenters") }}">National Data Centers</a></li>
                 </ul>
             </li>
             <li>
