Rename repository -> center for consistency.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/NationalDataCenters.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/NationalDataCenters.html.twig
@@ -63,7 +63,7 @@ set properties = [
     viewInterface = "{{ path('pelagos_app_ui_nationaldatacenter_default') }}"
     personInterface = "{{ path('pelagos_app_ui_person_default') }}"
     entityApi = "{{ path('pelagos_api_national_data_center_get_collection') }}"
-    entityNiceName = "Funding Organization"
+    entityNiceName = "National Data Center"
     class = "entityTable stripe"
     width = "100%"
     data-ajax = '{
@@ -90,7 +90,7 @@ set properties = [
     <thead>
         <tr>
             <th>#</th>
-            <th>National Datacenter Name</th>
+            <th>National Data Center Name</th>
             <th>Website</th>
             <th>City</th>
             <th>Created</th>
@@ -103,8 +103,8 @@ set properties = [
         <tr>
             <td class="buttons" colspan = "8">
                 <div>
-                    <button id="button_detail">View National Data Repository Details</button>
-                    <button id="button_delete">Delete National Data Repository</button>
+                    <button id="button_detail">View National Data Center Details</button>
+                    <button id="button_delete">Delete National Data Center</button>
                     <span id="selection_comment">
                         <i>For additional options, please make a selection above.</i>
                     </span>
