Add support in grid view for an arbitrary URL display.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/NationalDataCenters.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/NationalDataCenters.html.twig
@@ -80,6 +80,7 @@ set properties = [
         { "data": "modifier" }
     ]'
     data-order = '[[ 1, "asc" ]]'
+    urlColumn = "2"
     creatorColumn = "4"
     modifierColumn = "6"
     creationTimeStampColumn = "3"
