--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -69,7 +69,7 @@
 {% endblock %}
 
 {% block body %}
-{% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
+{% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') or is_granted('ROLE_SUBJECT_MATTER_EXPERT')%}
     <h1>Dataset Review</h1>
         {% if udi is null %}
             {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
@@ -87,7 +87,7 @@
             </div>
             {% include 'PelagosAppBundle:DatasetReview:submission-form.html.twig' %}
         {% endif %}
-{% elseif not is_granted('ROLE_DATA_REPOSITORY_MANAGER') and is_granted('IS_AUTHENTICATED_FULLY') %}
+{% elseif not (is_granted('ROLE_DATA_REPOSITORY_MANAGER') or is_granted('ROLE_SUBJECT_MATTER_EXPERT')) and is_granted('IS_AUTHENTICATED_FULLY') %}
     <div class="messages error">
         <h2 class="element-invisible">Error message</h2>
         This page is only accessible by Data Repository Managers.
