--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/form.html.twig
@@ -8,11 +8,13 @@
         <form id="udiLoadReviewform">
             <label for="udiReview"><b>Unique Dataset Identifier (UDI): </b></label>
             <input minlength="16" type="text" id="udiReview" name="udiReview" style="width: 80%">
-            <button class="reviewButtons"
-                    disabled
-                    name="review" id="loadReviewButton"
-                    type="button">Review Dataset
-            </button>
+            {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
+                <button class="reviewButtons"
+                        disabled
+                        name="review" id="loadReviewButton"
+                        type="button">Review Dataset
+                </button>
+            {% endif %}
             <button class="reviewButtons"
                     disabled
                     name="view" id="viewButton"
@@ -22,8 +24,8 @@
         </form>
     </fieldset>
     <fieldset>
-            <b>Submitted Datasets</b>
-            {% include 'PelagosAppBundle:DatasetReview:datasets-submitted.html.twig' %}
+        <b>Submitted Datasets</b>
+        {% include 'PelagosAppBundle:DatasetReview:datasets-submitted.html.twig' %}
     </fieldset>
 
 </div>
